--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DBAddress": "Server=./;Database=AddressManager_Wilco;User Id=OverHung;Password=qfW3qCN8EL6&7V4v;TrustServerCertificate=true;"
+    },
+
+    "AllowedHosts": "*"
 }
